--- a/index.html
+++ b/index.html
@@ -49,10 +49,20 @@
             <div id="graphic-row">
               <div id="donut-chart-90"></div>
               <p class="chart-subtitle">1990s</p>
+              <span class="hover-text">
+                <p>Los conflictos estatales son aquellos que implican a varios estados.</p>
+                <p>Los conflictos no estatales son aquellos que involucran a grupos armados no gubernamentales.</p>
+                <p>Los conflictos unidireccionales son aquellos en los que un actor armado ataca a civiles sin oposición significativa.</p>
+              </span>
             </div>
             <div id="graphic-row">
               <div id="donut-chart-10"></div>
               <p class="chart-subtitle">2010s</p>
+              <span class="hover-text">
+                <p>Los conflictos estatales son aquellos que implican a varios estados.</p>
+                <p>Los conflictos no estatales son aquellos que involucran a grupos armados no gubernamentales.</p>
+                <p>Los conflictos unidireccionales son aquellos en los que un actor armado ataca a civiles sin oposición significativa.</p>
+              </span>
             </div>
           </div>
         </section>
