--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <span class="header__title-1" data-role="DATA">DATA</span>
                     <span class="header__title-2" data-role="SCIENTIST">SCIENTIST</span>
                 </h1>
-                <p class="header__msg">As a data scientist, my passion lies in descovering and exploiting the 
+                <p class="header__msg">As a data scientist, my passion lies in discovering and exploiting the 
                     information hidden inside the data.</p>
                 <a
                     href="./assets/docs/CV_EN.pdf" 
